tests/errors/test_03.x
// Identifier declared void
fn main() -> void {
    let x: void = 21;
}